# pp-doclayout-onnx

./: .gitignore  Cargo.toml  README.md  pyproject.toml
scripts/: download_model.py
src/: error.rs  label.rs  lable.rs  lib.rs  main.rs  pdf.rs  wasm.rs
src/layout/: mod.rs  model.rs  postprocess.rs  preprocess.rs
tests/: pipeline.rs
web/: index.html
