[package]
name = "pp-doclayout-onnx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
imageproc = "0.27.0"
ndarray = "0.17"
ort = { version = "=2.0.0-rc.12", features = ["webgpu"] }
pdfium = { package = "liteparse-pdfium", version = "1.3.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
