[package]
name = "pp-doclayout-onnx"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pp-doclayout-onnx"
path = "src/main.rs"
required-features = ["native"]

[features]
default = ["native"]
native = [
    "dep:pdfium",
    "ort/copy-dylibs",
    "ort/download-binaries",
    "ort/tls-native",
    "ort/webgpu",
]
wasm = [
    "dep:console_error_panic_hook",
    "dep:js-sys",
    "dep:ort-web",
    "dep:serde-wasm-bindgen",
    "dep:tracing-wasm",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "ort/alternative-backend",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
console_error_panic_hook = { version = "0.1", optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.27.0", default-features = false }
js-sys = { version = "0.3", optional = true }
ndarray = "0.17"
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["api-21", "ndarray", "std", "tracing"] }
ort-web = { version = "0.2.1", optional = true }
pdfium = { package = "liteparse-pdfium", version = "1.3.0", optional = true }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6", optional = true }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-wasm = { version = "0.2", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
